# goit-hw-04

./: main.py  pyproject.toml
src/engine/: game_loop.py  input_handler.py  renderer.py  scene_manager.py
src/entities/: enemy.py  item.py  player.py
src/systems/: ai.py  collision.py  physics.py
src/ui/: hud.py  inventory.py
src/utils/: constants.py  helpers.py
